<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context="com.example.fahim.calender.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="106dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toStartOf="@+id/textView3"
        android:background="?attr/colorButtonNormal"
        android:text="@string/textView2"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4"
        android:background="?attr/colorButtonNormal"
        android:text="@string/textView3"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/textView4"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginBottom="15dp"
        android:background="@android:color/holo_blue_bright"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText4"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginBottom="14dp"
        android:background="@android:color/holo_blue_bright"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText3" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_marginBottom="42dp"
        android:background="@android:color/holo_blue_bright"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="17dp"
        android:text="@string/textView"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="25dp"
        android:text="@string/textView5"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="23dp"
        android:onClick="calculator"
        android:layout_marginStart="23dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/button"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/textView6"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/textView7"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText3"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:text="@string/textView8"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText4"
        android:layout_alignBottom="@+id/editText4"
        android:layout_alignEnd="@+id/textView7"
        android:layout_alignRight="@+id/textView7"
        android:text="@string/textView9"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:text="@string/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:text="@string/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_toEndOf="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:text="@string/textView12" />

</RelativeLayout>
